feat: update YAML configuration loading and add setup.yml

--- a/components/about.htm
+++ b/components/about.htm
@@ -14,6 +14,7 @@
 
     <a href="/api/v1/yahoo/summary?cgo=^IXIC,AAPL,CRM,CTA,MSFT,CPNG,TECK">YF-SUMMARY</a><br>
     <a href="/api/v1/portfolios">Portfolio listing</a><br>
+    <a href="/api/v1/mm/index">HK equity list</a><br>
 
     <a href="/api/v1/dscan?cgo=$NAA20R,$NAA50R,$NAA150R,$NAA200R">SC Market Breadth</a><br>
     <a href="/api/v1/stockcharts/def/servlet/SC.uscan?cgo=SPY,MSFT,CPNG,TECK|B14&p=1&format=json&order=d">Stock charts proxy</a><br>
