feat: add proxy route for WhaleWisdom and update about page links

--- a/components/about.htm
+++ b/components/about.htm
@@ -17,6 +17,7 @@
 
     <a href="/api/v1/dscan?cgo=$NAA20R,$NAA50R,$NAA150R,$NAA200R">SC Market Breadth</a><br>
     <a href="/api/v1/stockcharts/def/servlet/SC.uscan?cgo=SPY,MSFT,CPNG,TECK|B14&p=1&format=json&order=d">Stock charts proxy</a><br>
+    <a href="/api/v1/whalewisdom/portfolios/filer/holdings?id=alphabet-inc&q1=-1&type_filter=1,2,3,4&symbol=&change_filter=&minimum_ranking=&minimum_shares=&minimum_mv=&is_etf=0&sc=false&sort=current_mv&order=desc&offset=0&limit=100&exclude_subadvisor=false">13F portfolios proxy</a><br>
 </body>
 
 </html>
