feat: refactor database connection and add daily stock stats query

--- a/components/about.htm
+++ b/components/about.htm
@@ -4,7 +4,8 @@
   <div>
     <h1>Health check</h1>
     <a href="/api/v1/hc">Health check</a><br>
-    <a href="/api/v1/dscan/sctr?view=L">List all large caps</a><br>
+    <a href="/api/v1/dscan/sctr/us?view=L">List all US large caps</a><br>
+    <a href="/api/v1/dscan/sctr/hk?view=L">List all HK equity</a><br>
 
     <a href="/api/v1/yahoo/taIndicator?cgo=^IXIC,^GSPC,^DJI|S50DF&p=1&format=json&order=d">yahoo index-scan</a><br>
     <a href="/api/v1/yahoo/taIndicator?cgo=0001.HK,0002.HK,0003.HK|B14">yahoo hk-scan</a><br>
@@ -13,7 +14,6 @@
     <a href="/api/v1/yahoo/taIndicator?cgo=SPY,MSFT,CPNG,TECK,VST,NTRA,NVDA,COHR,GE,WWD,STX,ANET,FLEX,ZI,NWSA,DFS,VRT,KMI,FCX,KBR,MRVL,WAB,LLY,PANW,CCJ|S50DF&p=1&format=json&order=d">yahoo SMA50 Diff</a><br>
 
     <a href="/api/v1/yahoo/summary?cgo=^IXIC,AAPL,CRM,CTA,MSFT,CPNG,TECK">YF-SUMMARY</a><br>
-    <a href="/api/v1/mm/index">HK equity list</a><br>
 
     <a href="/api/v1/dscan?cgo=$NAA20R,$NAA50R,$NAA150R,$NAA200R">SC Market Breadth</a><br>
     <a href="/api/v1/stockcharts/def/servlet/SC.uscan?cgo=SPY,MSFT,CPNG,TECK|B14&p=1&format=json&order=d">Stock charts proxy</a><br>
