feat: add queryDailyMarketStats function and endpoint for HK Market Breadth

--- a/components/about.htm
+++ b/components/about.htm
@@ -6,6 +6,7 @@
     <a href="/api/v1/hc">Health check</a><br>
     <a href="/api/v1/dscan/sctr/us?view=L">List all US large caps</a><br>
     <a href="/api/v1/dscan/sctr/hk?view=L">List all HK equity</a><br>
+    <a href="/api/v1/dscan/mm/hk">HK Market Breadth</a><br>
 
     <a href="/api/v1/yahoo/taIndicator?cgo=^IXIC,^GSPC,^DJI|S50DF&p=1&format=json&order=d">yahoo index-scan</a><br>
     <a href="/api/v1/yahoo/taIndicator?cgo=0001.HK,0002.HK,0003.HK|B14">yahoo hk-scan</a><br>
