feat: implement portfolio management endpoints and refactor proxy routes

--- a/components/about.htm
+++ b/components/about.htm
@@ -7,6 +7,7 @@
     <a href="/api/v1/dscan/sctr/us?view=L">List all US large caps</a><br>
     <a href="/api/v1/dscan/sctr/hk?view=L">List all HK equity</a><br>
     <a href="/api/v1/dscan/mm/hk">HK Market Breadth</a><br>
+    <a href="/api/v1/dscan/pp/list">portfolio list</a><br>
 
     <a href="/api/v1/yahoo/taIndicator?cgo=^IXIC,^GSPC,^DJI|S50DF&p=1&format=json&order=d">yahoo index-scan</a><br>
     <a href="/api/v1/yahoo/taIndicator?cgo=0001.HK,0002.HK,0003.HK|B14">yahoo hk-scan</a><br>
@@ -19,6 +20,8 @@
     <a href="/api/v1/dscan?cgo=$NAA20R,$NAA50R,$NAA150R,$NAA200R">SC Market Breadth</a><br>
     <a href="/api/v1/stockcharts/def/servlet/SC.uscan?cgo=SPY,MSFT,CPNG,TECK|B14&p=1&format=json&order=d">Stock charts proxy</a><br>
     <a href="/api/v1/whalewisdom/portfolios/filer/holdings?id=alphabet-inc&q1=-1&type_filter=1,2,3,4&symbol=&change_filter=&minimum_ranking=&minimum_shares=&minimum_mv=&is_etf=0&sc=false&sort=current_mv&order=desc&offset=0&limit=100&exclude_subadvisor=false">13F portfolios proxy</a><br>
-</body>
+    <a href="/api/v1/fintelio/portfolios/api/i/alloc/two-sigma-investments-llc">fintel.io 13F portfolios proxy</a><br>
+
+  </body>
 
 </html>
