--- a/components/about.htm
+++ b/components/about.htm
@@ -5,7 +5,7 @@
     <h1>Health check</h1>
     <a href="/api/v1/hc">Health check</a><br>
     <a href="/api/v1/dscan/sctr/us?view=L">List all US large caps</a><br>
-    <a href="/api/v1/dscan/sctr/hk?view=L">List all HK equity</a><br>
+    <a href="/api/v1/dscan/sctr/hk?view=default">List all HK equity</a><br>
     <a href="/api/v1/dscan/mm/hk">HK Market Breadth</a><br>
     <a href="/api/v1/dscan/pp/list">portfolio list</a><br>
 
