feat: add endpoint for querying daily sectors statistics and update about page

--- a/components/about.htm
+++ b/components/about.htm
@@ -7,6 +7,7 @@
     <a href="/api/v1/dscan/sctr/us?view=L">List all US large caps</a><br>
     <a href="/api/v1/dscan/sctr/hk?view=default">List all HK equity</a><br>
     <a href="/api/v1/dscan/mm/hk">HK Market Breadth</a><br>
+    <a href="/api/v1/dscan/sm/hk">HK Sectors Breadth</a><br>    
     <a href="/api/v1/dscan/pp/list">portfolio list</a><br>
 
     <a href="/api/v1/yahoo/taIndicator?cgo=^IXIC,^GSPC,^DJI|S50DF&p=1&format=json&order=d">yahoo index-scan</a><br>
